Update robolectric to v4.17 (#1102)
* Update robolectric to v4.17

* Fixing robolectric tests

---------

Co-authored-by: renovate[bot] <29139614+renovate[bot]@users.noreply.github.com>
Co-authored-by: Anthony Restaino <anthonyrestaino11@gmail.com>